--- a/docs/_layouts/global.html
+++ b/docs/_layouts/global.html
@@ -177,4 +177,14 @@
         </script>
 
     </body>
+    <!-- MathJax Section -->
+    <script type="text/javascript"
+     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script>
+      MathJax.Hub.Config({
+        tex2jax: {
+          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+        }
+      });
+    </script>
 </html>
