--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -104,3 +104,8 @@ a.menu:after, .dropdown-toggle:after {
   content: none;
 }
 
+.MathJax .mo { color: inherit }
+.MathJax .mi { color: inherit }
+.MathJax .mf { color: inherit }
+.MathJax .mh { color: inherit }
+
